--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -4566,10 +4566,12 @@ layers:
                         order: 0
                         # visible: false
                 us_national_park:
+                    # yosemite national park, death valley national park, grand canyon national park
                     filter: { operator: [ "United States National Park Service", "US National Park Service" ] }
                     draw:
                         dots2:
-                            color: [[4,[0.655,0.800,0.796]],[8,[0.588,0.780,0.773]]]
+                            color: [[4,[0.000,0.745,0.497]],[9,[0.000,0.631,0.421]]]
+                            # color: [[4,[0.242,0.737,0.712]],[12,[0.224,0.682,0.659]]]
         tier2:
             filter: 
                 any:
@@ -4591,7 +4593,7 @@ layers:
             conservation:
                 filter:
                     kind: [conservation, protected_area, nature_reserve]
-                    $zoom: { min: 6 }
+                    $zoom: { min: 4 }
                 draw:
                     dots2:
                         color: *green8
@@ -4605,7 +4607,7 @@ layers:
                     filter: { protect_class: ["6",6] }
                     draw:
                         dots2:
-                            color: *green7
+                            color: [0.442,0.960,0.865] #*green7
 
             # gotta be a protected area to draw green, not just a landcover type
             farm:
